# trojan-rust

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  config.toml  rust-toolchain.toml
.github/: FUNDING.yml
.github/workflows/: build-binary.yml  build-docker-image.yml  nightly.yml
src/: client.rs  common.rs  config.rs  main.rs  relay.rs  server.rs  service.rs  trojan.rs
src/auth/: from_config.rs  mod.rs  redis.rs
src/inbound/: fallback.rs  mod.rs  socks5.rs  tls.rs  tls_openssl.rs  trojan.rs
src/inbound/trojan/: fallback.rs
src/outbound/: direct.rs  mod.rs  trojan.rs
src/outbound/trojan/: tcp.rs  tls.rs
src/utils/: acl.rs  config.rs  count_stream.rs  hook_stream.rs  logger.rs  mod.rs  peekable_stream.rs  pushing_stream.rs  timeout_stream.rs  wildcard_match.rs
