[package]
name = "trojan-rust"
version = "0.1.0"
edition = "2018"
authors = ["llc1123 <i@llc.moe>", "imspace <spacemeowx2@gmail.com>"]
description = "Yet another trojan-gfw implementation in RRRRRRRRRRRust"

[dependencies]
anyhow = "1.0.40"
chrono = "0.4.19"
clap = "3.0.0-beta.2"
fern = { version = "0.6.0", features = ["colored"] }
log = "0.4.14"
serde = "1.0.125"
serde_derive = "1.0.125"
tokio-rustls = "0.22.0"
tokio = { version = "1.5.0", features = ["full"] }
toml = "0.5.8"
hyper = { version = "0.14.7", features = ["http1", "server"] }
http = "0.2"
