cargo-features = ["strip"]

[package]
name = "trojan-rust"
version = "1.0.1"
edition = "2018"
authors = ["llc1123 <i@llc.moe>", "imspace <spacemeowx2@gmail.com>"]
description = "Yet another trojan-gfw implementation in Rust"

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
strip = "symbols"

[dependencies]
anyhow = "1.0.40"
chrono = "0.4.19"
clap = "3.0.0-beta.2"
fern = { version = "0.6.0", features = ["colored"] }
log = "0.4.14"
serde = "1.0.125"
serde_derive = "1.0.125"
tokio = { version = "1.5.0", features = ["full"] }
tokio-stream = { version = "0.1.6", features = ["sync"] }
toml = "0.5.8"
hyper = { version = "0.14.7", features = ["http1", "server"] }
http = "0.2"
futures = "0.3.14"
socks5-protocol = "0.3.4"
tokio-util = { version = "0.6.6", features = ["codec", "net"] }
bytes = "1.0.1"
async-trait = "0.1.50"
sha2 = "0.9.5"
hex = "0.4.3"
redis = { version = "0.20.0", features = ["tokio-comp"] }
tokio-openssl = "0.6.1"
openssl = { version = "0.10.34", features = ["vendored"] }
