[package]
name = "trojan-rust"
version = "1.4.0"
edition = "2018"
authors = ["llc1123 <i@llc.moe>", "imspace <spacemeowx2@gmail.com>"]
description = "Yet another trojan-gfw implementation in Rust"
publish = false

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
strip = "symbols"

[dependencies]
anyhow = "1.0.66"
chrono = "0.4.22"
clap = { version = "4.0.18", features = ["derive", "env"] }
fern = { version = "0.6.1", features = ["colored"] }
log = "0.4.17"
serde = "1.0.147"
serde_derive = "1.0.147"
tokio = { version = "1.21.2", features = ["full"] }
tokio-stream = { version = "0.1.11", features = ["sync"] }
toml = "0.5.9"
hyper = { version = "0.14.20", features = ["http1", "server"] }
http = "0.2.8"
futures = "0.3.25"
socks5-protocol = "0.3.5"
tokio-util = { version = "0.7.4", features = ["codec", "net"] }
bytes = "1.2.1"
async-trait = "0.1.58"
sha2 = "0.10.6"
hex = "0.4.3"
redis = { version = "0.22.1", features = ["tokio-comp", "connection-manager"] }
tokio-openssl = "0.6.3"
openssl = { version = "0.10.42", features = ["vendored"] }
tokio-io-timeout = "1.2.0"
serde_with = "2.0.1"
